Fix /skeboss help and permission-filtered tab completion
- Show help on /skeboss and /skeboss help without admin permission
- List only commands the sender can use
- Show weapon list when /skeboss weapon has no args

Co-authored-by: 213asdaw <213asdaw@users.noreply.github.com>